# MeatPy

./: .coveragerc  .gitignore  .gitignore.swp  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  README.rst  REFACTORING_SUMMARY.md  codecov.yml  mkdocs.yml  output.txt  pyproject.toml  pytest.ini  setup.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  draft-pdf.yml  publish.yml  release.yml  test.yml
docs/: Makefile  codecov-setup.md  contributing.md  index.md  installation.md  itch50_parser_writer.md
docs/api/: overview.md
docs/guide/: 01_listing_symbols.ipynb  02_extracting_symbols.ipynb  03_top_of_book_snapshots.ipynb  04_full_lob_snapshots.ipynb  examples.md  getting-started.md
docs/source/: .index.rst.swp  conf.py  getting_started.rst  index.rst  meatpy.itch50.rst  meatpy.rst  meatpy_overview.rst  meatpy_submodules.rst  modules.rst
examples/: context_manager_demo.py  generic_types_example.py  itch50_lob_example.py  itch50_parser_writer_example.py  itch50_reader_example.py  modern_usage.py  parquet_export_example.py
meatpy/: __init__.py  level.py  lob.py  market_event_handler.py  market_processor.py  message_parser.py  timestamp.py  trading_status.py  types.py
meatpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
meatpy/event_handlers/: __init__.py  lob_event_recorder.py  lob_recorder.py  ofi_recorder.py  spot_measures_recorder.py
meatpy/itch50/: __init__.py  itch50_exec_trade_recorder.py  itch50_market_message.py  itch50_market_processor.py  itch50_message_parser.py  itch50_message_reader.py  itch50_ofi_recorder.py  itch50_order_event_recorder.py  itch50_top_of_book_message_recorder.py
paper/: paper.bib  paper.md
rules/: python.mdc
samples/itch41/: Step0_ExtractSymbols.py  Step1_Parsing.py  Step2_Processing.py
samples/itch50/: 01_listing_symbols.py  02_extracting_symbols.py  (+5 more)
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_csv_writer.py  test_events.py  test_itch41_messages.py  test_itch41_processor.py  test_itch41_reader.py  test_itch50_json.py  test_itch50_parser_writer.py  test_itch50_reader_writer.py  test_itch50_validation.py  test_level.py  test_lob.py  test_market_event_handler.py  test_market_processor.py  test_message_parser.py  test_parquet_writer.py  test_recorders.py  test_registry.py  test_timestamp.py  test_trading_status.py  test_types.py  test_writers.py
(+43 files in other folders)
