[tool.poetry]
name = "meatpy"
version = "0.1.0"
description = "Read and process limit order book data"
authors = ["Vincent Grégoire <vincent.gregoire@hec.ca>", "Charles Martineau <charles.martineau@utoronto.ca>"]
maintainers = ["Vincent Grégoire <vincent.gregoire@hec.ca>"]
repository = "https://github.com/vgreg/MeatPy"
license = "BSD-3-Clause"
readme = "README.md"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Education',
    'Intended Audience :: Financial and Insurance Industry',
    'Topic :: Office/Business :: Financial',
    'Topic :: Scientific/Engineering :: Information Analysis',
]

[tool.poetry.dependencies]
python = "^3.10"
rich = { version = "^13.7", optional = true }
pyarrow = { version = "^15.0", optional = true }

[tool.poetry.extras]

rich =["rich"]
pyarrow = ["pyarrow"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
ruff = "^0.3"
pre-commit = "^3.7"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.16"
mkdocstrings = "^0.24.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
